force-app/main/default/objects/ToFromHDE__mdt/ToFromHDE__mdt.object-meta.xml
<CustomObject>
    <description>Objeto utilizado na automação de mapeamento de complexidados dos chamados abertos pelos operadores</description>
    <label>HDE - DePara</label>
    <pluralLabel>HDE - DeParas</pluralLabel>
</CustomObject>