force-app/main/default/objects/ToFromHDE__mdt/fields/OperatorSegment__c.field-meta.xml
<CustomField>
    <fullName>OperatorSegment__c</fullName>
    <label>Segmento do operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Vivo V</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Púrpura</fullName>
            </value>
            <value>
                <fullName>Ouvidoria Comunidades</fullName>
            </value>
            <value>
                <fullName>Lojas (Revendas)</fullName>
            </value>
            <value>
                <fullName>V</fullName>
                <isActive>false</isActive>
                <label>V</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>