force-app/main/default/objects/ToFromHDE__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Tipo de Registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>