force-app/main/default/objects/ToFromHDE__mdt/fields/SourceApiName__c.field-meta.xml
<CustomField>
    <fullName>SourceApiName__c</fullName>
    <label>Api Name do campo Origem</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>