force-app/main/default/objects/ToFromHDE__mdt/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <label>Nome do Campo de Origem</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>