force-app/main/default/objects/ToFromHDE__mdt/fields/SourcePicklistValue__c.field-meta.xml
<CustomField>
    <fullName>SourcePicklistValue__c</fullName>
    <label>Valor de PickList da Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>