force-app/main/default/objects/ToFromHDE__mdt/fields/TargetApiName__c.field-meta.xml
<CustomField>
    <fullName>TargetApiName__c</fullName>
    <label>Api name do campo destino</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>