force-app/main/default/objects/ToFromHDE__mdt/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <label>Nome do Campo de Destino</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>