force-app/main/default/objects/ToFromHDE__mdt/fields/TargetPicklistValue__c.field-meta.xml
<CustomField>
    <fullName>TargetPicklistValue__c</fullName>
    <label>Valor de PickList do Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>