force-app/main/default/objects/ToFromHDE__mdt/fields/UsedIn__c.field-meta.xml
<CustomField>
    <fullName>UsedIn__c</fullName>
    <label>Usado em</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>