force-app/main/default/objects/ToFromHDE__mdt/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>OperatorSegment__c</columns>
    <columns>Object__c</columns>
    <columns>UsedIn__c</columns>
    <columns>SourceApiName__c</columns>
    <columns>TargetApiName__c</columns>
    <columns>SourcePicklistValue__c</columns>
    <columns>TargetPicklistValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>